--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+.footer {
+    display: flex;
+    margin: 82px auto 32px;
+    max-width: 960px;
+    flex-direction: column;
+    align-items: center;
+}
+
+.layout-footer {
+    bottom: 5px;
+    position: fixed;
+    font-weight: normal !important;
+    /* font-style: italic; */
+    font-size: 15px;
+}
