--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -356,11 +356,17 @@
   }
 
   .btn_acao_verbo_fechado {
-    background: #a8c5e2a1;
+      margin-top: 1.4em;
+      margin-bottom: 0.4em;
+      background: rgba(58, 58, 58, 0.671);
+      color: white;
+      font-weight: 600;
   }
 
   .btn_acao_verbo_aberto {
-      background: #1976d2d5;
+      margin-top: 1.4em;
+      margin-bottom: 0.4em;
+      background: rgb(58, 58, 58);
       color: white;
       font-weight: 600;
   }
