--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -169,6 +169,7 @@
   .segundo-botao {
       background-color: #ff8800 !important;
       font-size: 20px !important;
+      cursor: pointer;
   }
 
   .card.card.highlight-card span {
@@ -209,20 +210,57 @@
 
       overflow: hidden;
       background-color: rgb(15, 15, 16);
+      margin-bottom: 1em !important;
+      cursor: pointer;
   }
 
-  .terminal::before {
-      content: "\2022 \2022 \2022";
+  .terminal_past::before {
+      content: "PAST";
       position: absolute;
       top: 0;
       left: 0;
       background: rgb(58, 58, 58);
       color: #c2c3c4;
       width: 100%;
-      font-size: 1rem;
       line-height: 0;
       padding: 14px 0;
-      text-indent: 4px;
+      text-align: center;
+      color: white;
+      font-weight: 600;
+  }
+
+  .terminal_past_participle::before {
+      content: "PAST PARTICIPLE";
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: rgb(58, 58, 58);
+      color: #c2c3c4;
+      width: 100%;
+      line-height: 0;
+      padding: 14px 0;
+      text-align: center;
+      color: white;
+      font-weight: 600;
+  }
+
+  .terminal_translation::before {
+      content: "TRANSLATION";
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: rgb(58, 58, 58);
+      color: #c2c3c4;
+      width: 100%;
+      line-height: 0;
+      padding: 14px 0;
+      text-align: center;
+      color: white;
+      font-weight: 600;
+  }
+
+  .filter_blur {
+      filter: blur(5px);
   }
 
   .terminal pre {
@@ -331,6 +369,7 @@
       padding-right: 0%;
       padding-top: 1%;
       padding-bottom: 2%;
+      cursor: pointer;
   }
 
   .container {
